--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<title>gh-pages template</title>
 </head>
 <body>
-  <div id="helloworld">Hello Taterbase!</div>
+  <script src="https://gist.github.com/4230923.js?file=test.md"></script>
 </body>
 </html>
