--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<title>gh-pages template</title>
 </head>
 <body>
-  <script src="https://gist.github.com/4230923.js?file=test.md"></script>
+  <h1>And I lol'd.</h1>
 </body>
 </html>
